# nn-from-scratch

./: README.md  README.rst  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/nnfromscratch/: __init__.py  __nnfromscratch.py
tests/: test_initialize_network.py
