[metadata]
name = nnfromscratch
version = 0.0.1
license = GNUv3
description = Implementation of NN from scratch
long_description = README.rst
author = Artur Palha
author_email = artur.palha@gmail.com
classifiers=
   Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
   =src
include_package_data = True
install_requires =
   numpy

[options.packages.find]
where = src